WIP: save changes before cleaning

--- a/.github/workflows/run-tests-and-publish.yml
+++ b/.github/workflows/run-tests-and-publish.yml
@@ -2,50 +2,51 @@ name: Run Tests and Publish Results
 
 on:
   push:
+    branches: [ master ]
   pull_request:
+    branches: [ master ]
 
 jobs:
   build-and-test:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Checkout
+      - name: Main Checkout
         uses: actions/checkout@v4
 
-      - name: Install .NET SDK (inline, avoids actions/setup-dotnet)
-        shell: bash
+      # Install .NET SDK only on GitHub-hosted runners
+      - name: Main Install .NET SDK
+        if: ${{ !env.ACT }}
         run: |
-          set -euo pipefail
-          echo "Installing dotnet via dotnet-install.sh (channel 8.0)..."
-          wget -q https://dot.net/v1/dotnet-install.sh -O /tmp/dotnet-install.sh
-          chmod +x /tmp/dotnet-install.sh
-          /tmp/dotnet-install.sh --channel 8.0 --install-dir $HOME/dotnet --architecture x64
-          export PATH="$HOME/dotnet:$PATH"
-          echo "dotnet version:"
-          $HOME/dotnet/dotnet --info
-
-      - name: Restore
-        run: dotnet restore MetWorks.WeatherApp.sln
+          bash <(curl -sSL https://dot.net/v1/dotnet-install.sh) --channel 8.0
 
       - name: Build
-        run: dotnet build MetWorks.WeatherApp.sln --no-restore --configuration Release
+        run: dotnet build --configuration Release
 
-      - name: Run tests (produce TRX)
-        run: |
-          RESULTS_DIR="$(pwd)/artifacts/TestResults"
-          mkdir -p "$RESULTS_DIR"
-          dotnet test MetWorks.WeatherApp.sln --no-build --logger "trx;LogFileName=results.trx" --results-directory "$RESULTS_DIR" --configuration Release
-
-      - name: Upload test results artifact (act-friendly)
-        if: env.ACT != 'true'
-        uses: actions/upload-artifact@v4
-        with:
-          name: test-results
-          path: artifacts/TestResults
+      - name: Test
+        run: dotnet test --configuration Release --logger trx --results-directory $GITHUB_WORKSPACE/artifacts/TestResults
 
       - name: Save test results locally for act
-        if: env.ACT == 'true'
+        if: ${{ env.ACT }}
         run: |
-          echo "Running under act — keeping artifacts in ./artifacts/TestResults for local inspection"
-          mkdir -p artifacts/act-run/TestResults
-          cp -r artifacts/TestResults/* artifacts/act-run/TestResults/ || true
-          ls -la artifacts/act-run/TestResults || true
+          echo "Listing test results for act..."
+          ls -la $GITHUB_WORKSPACE/artifacts/TestResults || true
+
+      - name: Copy newest TRX to latest.trx (act only)
+        if: ${{ env.ACT }}
+        run: |
+          latest=$(ls -t $GITHUB_WORKSPACE/artifacts/TestResults/*.trx | head -n1)
+          echo "Newest TRX is $latest"
+          cp -v "$latest" $GITHUB_WORKSPACE/artifacts/TestResults/latest.trx
+
+      - name: Debug paths
+        run: |
+          echo "GITHUB_WORKSPACE=$GITHUB_WORKSPACE"
+          ls -la $GITHUB_WORKSPACE/artifacts/TestResults || true
+
+      - name: Upload Test Results
+        if: ${{ !env.ACT }}
+        uses: actions/upload-artifact@v4
+        with:
+          name: TestResults
+          path: $GITHUB_WORKSPACE/artifacts/TestResults
